Bug 118251 - Crash when closing the color picker dialog if it was opened from the overflow toolbar popup ( Hangs on Win )
Summary: Crash when closing the color picker dialog if it was opened from the overflow...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2018-06-19 19:37 UTC by Maxim Monastirsky
Modified: 2018-06-25 11:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (7.37 KB, text/plain)
2018-06-20 18:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2018-06-19 19:37:24 UTC
Steps to reproduce:

1. Open Writer.
2. Resize the window horizontally, so that at least one of the toolbar color buttons won't be visible anymore.
3. Click the toolbar overflow indicator to show the hidden items.
4. Click the dropdown arrow of the color button, and choose "Custom Color..."
5. Close the dialog -> Crash.

Regression, as it used to work in 6.0.
Comment 1 Xisco Faulí 2018-06-19 20:38:35 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-05-08 12:35:19 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-05-08 16:05:41 +0200
commit bfcf57de81ddd5ed8544ff2ede23bd8428f0c0ce (patch)
tree a6d3a528b2ec1e5f41764984d16675df3d352621
parent b68daa69739e83095c023b683234d344d0fa02c8 (diff)
Resolves: tdf#117470 reuse parent window of colorwindow...
as parent of color selector window

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 2 Julien Nabet 2018-06-20 18:41:38 UTC
Created attachment 142979 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.

I attached a bt with symbols.
Comment 3 Xisco Faulí 2018-06-21 13:12:11 UTC
I've just tested this problem on Win and LibreOffice hangs trying to display the custom colour dialog. Also caused by the same commit...
Comment 4 Julien Nabet 2018-06-21 13:54:17 UTC
I'm gonna give a new try after my day time job because I'll got the commit https://cgit.freedesktop.org/libreoffice/core/commit/?id=b15244d526c285cd109f7195855409f698d0cdc0 in my local build.
Perhaps this commit may help.
Comment 5 Julien Nabet 2018-06-21 18:54:44 UTC
I confirm I don't reproduce this with master sources updated today ( eb678c01d35a485b9f79009c126e296d9e811d36)

Let's put this one to FIXED.
If someone still reproduces this, don't hesitate to reopen this tracker.
Comment 6 Xisco Faulí 2018-06-21 20:14:29 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: b25f59094794eb72eefdbbbca8ac69eb325120c8
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 7 Maxim Monastirsky 2018-06-21 20:55:39 UTC
Yes, this seems fixed with gtk3, but still hangs in Windows (as in comment 3) and in gtk2. Also, at least with gtk2 if I switch the focus to another application and back, it crashes.
Comment 8 Commit Notification 2018-06-22 15:50:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ac9db25da2d78f8ecc2ce68ad622cc6012972494

Resolves: tdf#118251 decide what parent colorpicker should have...

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-06-22 20:15:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=565f5d40c83ca30fcd2f28359e0f1df0b4cbb9fe&h=libreoffice-6-1

Resolves: tdf#118251 decide what parent colorpicker should have...

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Maxim Monastirsky 2018-06-24 22:50:17 UTC
Fully fixed now, thanks Caolán!