Resolves: tdf#118251 decide what parent colorpicker should have...

depending on if launched from a listbox within a dialog, or from
a (potentially) ephemeral toolbar

Change-Id: I5d3b5cc6dd501490b99b46250e2729fb8bc2a2e2
Reviewed-on: https://gerrit.libreoffice.org/56301
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>